fixed an issue where at specific screen sizes text was overlapping with the profile picture

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -83,7 +83,9 @@ nav {
         position: relative;
         top: 28px;
     }
-
+    .container {
+        width:960px;
+    }
 }
 
 body {
@@ -98,11 +100,6 @@ h2 {
     margin: 10px
 }
 
-@media only screen and (min-width: 960px) {
-    .container {
-        width:960px;
-    }
-}
 
 
 #me {
